spark/test/corpus/insert.txt
================================================================================
Spark: Insert overwrite with partition
================================================================================

INSERT OVERWRITE tab1
PARTITION (key1 = 'val1', key2 = 'val2')
SELECT
  col1,
  col2
FROM
(
  SELECT
    *
  FROM
    tab2
  WHERE
    key1 >= 'val'
) a1;

--------------------------------------------------------------------------------

(program
  (statement
    (insert
      (keyword_insert)
      (keyword_overwrite)
      (object_reference
        (identifier))
      (table_partition
        (keyword_partition)
        (identifier)
        (literal)
        (identifier)
        (literal))
      (select
        (keyword_select)
        (select_expression
          (term
            (field
              (identifier)))
          (term
            (field
              (identifier)))))
      (from
        (keyword_from)
        (relation
          (subquery
            (select
              (keyword_select)
              (select_expression
                (term
                  (all_fields))))
            (from
              (keyword_from)
              (relation
                (object_reference
                  (identifier)))
              (where
                (keyword_where)
                (binary_expression
                  (field
                    (identifier))
                  (literal)))))
          (identifier))))))
